# longest-word

./: app.yaml  main.py  pyproject.toml  requirements.txt  wsgi.py
longest_word/: game.py
static/: style.css
templates/: check.html  home.html
tests/: test_game.py
